@@ -32,6 +32,8 @@ encoding_group enc_group(std::string_view);
 PQXX_LIBEXPORT glyph_scanner_func *get_glyph_scanner(encoding_group);
 
 
+// TODO: Cut corners for ASCII needle.  The "ASCII supersets" act like ASCII.
+// TODO: Actually, are we using these at all!?
 /// Find a single-byte "needle" character in a "haystack" text buffer.
 std::size_t find_with_encoding(
   encoding_group enc, std::string_view haystack, char needle,
